# project-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: sonar.yml
backend/: .env.example  Dockerfile  database.py  main.py  models.py  pyproject.toml  repository.py  schemas.py  seed.py  seed_tasks.json
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/v1/: task_routes.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/db/models/: task.py
backend/app/db/repositories/: __init__.py  task_repository.py
backend/app/db/seeds/: project_tracker_seed.json
backend/app/schemas/: __init__.py  common.py  task.py
backend/app/services/: seed_service.py
backend/routers/: tasks.py
backend/tests/: conftest.py  test_tasks.py
backend/tests/e2e/: test_health.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_list.py  test_tasks_update.py
backend/tests/integration/: test_repository.py
backend/tests/unit/: test_enums.py  test_exceptions.py  test_main_routes.py  test_models.py  test_schemas.py  test_seed_service.py  test_session.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: tasks.test.ts  tasks.ts
frontend/src/components/: CreateTaskForm.tsx  KanbanColumn.tsx  TaskCalendar.tsx  TaskCard.tsx  TaskDetailModal.tsx  TaskTaskList.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/types/: task.ts
